# mover

./: .gitignore  .gitmodules  README.md
controller/: README.md
mover_controller/: .gitignore  Cargo.toml  flake.nix  memory.x  result
mover_controller/.cargo/: config.toml
mover_controller/src/: main.rs  motor.rs  system.rs  usb.rs
mover_pcb/: README.md  fp-lib-table  mover-pcb.kicad_pcb  mover-pcb.kicad_prl  mover-pcb.kicad_pro  mover-pcb.kicad_sch  sym-lib-table
mover_pcb/TB6612.pretty/: TB6612FNG_Module.kicad_mod
mover_pcb/Twenty.pretty/: TwentyLogo.kicad_mod
ros_ws/: README.md
ros_ws/src/mover_description/: CMakeLists.txt  package.xml
ros_ws/src/mover_description/launch/: display.launch.py
ros_ws/src/mover_description/rviz/: urdf.rviz
ros_ws/src/mover_description/urdf/: mover.urdf.xacro  wheel.xacro
