[package]
name = "mover_controller"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
cortex-m-rt = "0.7"
critical-section = "1.2.0"
embedded-hal = "1.0"
itoa = "1.0.18"
libm = "0.2.16"
panic-halt = "0.2"
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.10", features = ["critical-section-impl", "rt"] }
ryu = "1.0.23"
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[profile.release]
debug = 1
lto = true
opt-level = "s"
codegen-units = 1
strip = "symbols"
